--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h4>What's Steeping at The Tea Cozy?</h4>
         <div class="tea">
             <div class="blitz-tea">
-                <img src="/images/img-berryblitz.jpg" alt="img-berryblitz">
+                <img src="./images/img-berryblitz.jpg" alt="img-berryblitz">
                 <h4>Fall Berry Blitz Tea</h4>
             </div>
             <div class="Spiced-Rum-Tea">
@@ -38,15 +38,15 @@
                 <h4>Spiced Rum Tea</h4>
             </div>
             <div class="donut">
-                <img src="/images/img-donut.jpg" alt="img-donut">
+                <img src="./images/img-donut.jpg" alt="img-donut">
                 <h4>Seasonal Donuts</h4>
             </div>
             <div class="myrtle-ave">
-                <img src="/images/img-myrtle-ave.jpg" alt="img-myrtle-ave">
+                <img src="./images/img-myrtle-ave.jpg" alt="img-myrtle-ave">
                 <h4>Myrtle Ave Tea</h4>
             </div>
             <div class="bedford-bizarre">
-                <img src="/images/img-bedford-bizarre.jpg" alt="">
+                <img src="./images/img-bedford-bizarre.jpg" alt="">
                 <h4>Bedford Bizarre Tea</h4>
             </div>
         </div>
